Update to JavaFX