@@ -6,10 +6,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
-
-import org.apache.commons.lang3.text.StrSubstitutor;
+import java.util.UUID;
 
 import com.launcher.utils.GameEngine;
 import com.launcher.utils.LauncherConfig;
@@ -17,119 +15,137 @@ import com.launcher.utils.file.FileUtil;
 import com.launcher.utils.file.GameUtils;
 import com.launcher.utils.minecraft.json.Argument;
 import com.launcher.utils.minecraft.json.ArgumentType;
+import com.launcher.utils.minecraft.json.MinecraftVersion;
 import com.photon.util.ConsoleManager;
 import com.photon.util.ConsoleManager.EnumLogType;
-import com.photon.util.auth.Session;
 import com.photon.util.os.OperatingSystem;
 
-@SuppressWarnings("deprecation")
 public class GameRunner {
 
 	private GameEngine engine;
-	private Session session;
+	private GameUpdater updater;
 
-	public GameRunner(GameEngine gameEngine, Session account) {
+	public GameRunner(GameEngine gameEngine, GameUpdater updater) {
 		this.engine = gameEngine;
-		this.session = account;
-		ConsoleManager.print(EnumLogType.LAUNCHER, "Unpacking natives ...");
+		this.updater = updater;
+		ConsoleManager.print(EnumLogType.LAUNCHER, "Cleaning and unpacking natives...");
 		this.unpackNatives();
-		ConsoleManager.print(EnumLogType.LAUNCHER, "Deleting unrequired Natives ...");
-		this.deleteFakeNatives();
-		
 		LauncherConfig.load(gameEngine);
 	}
 
     public void launch() throws Exception {
-    	ArrayList<String> commands = this.getLaunchCommand();
-        ProcessBuilder processBuilder = new ProcessBuilder(commands);
+    	final ArrayList<String> commands = this.getLaunchCommand();
+        final ProcessBuilder processBuilder = new ProcessBuilder(commands);
         processBuilder.redirectInput(Redirect.INHERIT);
         processBuilder.redirectOutput(Redirect.INHERIT);
         processBuilder.redirectError(Redirect.INHERIT);
 		processBuilder.directory(engine.getGameFolder().getGameDir());
 		processBuilder.redirectErrorStream(true);
-		String cmds = "";
-		for (String command : commands) cmds += command + " ";
-		String[] ary = cmds.split(" ");
-		engine.getGameUpdater().setCurrentInfoText("updater.launching");
-		ConsoleManager.print(EnumLogType.LAUNCHER, "Launching: " + hideAccessToken(ary));
+		//updater.setCurrentInfoText("updater.launching");
+		
+		/* Display configuration */
+		List<String> commandLine = processBuilder.command();
+		ConsoleManager.create(String.join(" ", commandLine)).end();
+
 		try {
-			this.engine.getGameUpdater().getFrameToHide().setVisible(false);
-			Process process = processBuilder.start();
-			process.waitFor();
-			int exitVal = process.exitValue();
-			if (exitVal != 0) ConsoleManager.print(EnumLogType.LAUNCHER, "Minecraft has crashed!");
-			System.exit(0);
+			this.engine.appFrame.setVisible(false);
+			final Process process = processBuilder.start();
+			final int exitVal = process.waitFor();
+			if (exitVal != 0) {
+				/* Show the frames and active buttons */
+				try { process.waitFor(); } catch (InterruptedException e) { e.printStackTrace(); }
+
+				this.engine.appFrame.setVisible(true);
+				// new AlertFrame((Frame)this.engine.appFrame, 1, "", "Unable to launch, game has crashed!", EnumAlertType.ERROR);
+				// if(this.engine.appFrame.getContentPane() instanceof MainPanel panel) {
+				// 	panel.switchPlayVisibility(true);
+				// 	panel.playBtn.setTextColor(Color.white);
+				// 	panel.playBtn.setText(TranslationManager.format("mainPanel.play.text"));
+				// 	panel.updateThread.interrupt();
+				// 	panel.updaterTimer.stop();
+				// 	panel.launchingTimer.stop();
+				// }
+				this.updater.reset();
+
+				/* Log the error */
+				ConsoleManager.create("Process exited with code '"+exitVal+"', game has crashed").withType(EnumLogType.LAUNCHER).error().end();
+			} else System.exit(0);
 		} catch (IOException e) { throw new Exception("Cannot launch !", e); }
 	}
 
 	private ArrayList<String> getLaunchCommand() {
-		ArrayList<String> commands = new ArrayList<String>();
-		OperatingSystem os = OperatingSystem.getCurrentPlatform();
-        commands.add(OperatingSystem.getJavaPath());
-        commands.add("-XX:-UseAdaptiveSizePolicy");
-		
-		if (engine.getJVMArguments() != null) {
-			commands.addAll(engine.getJVMArguments().getJVMArguments());
-		}
+		final ArrayList<String> commands = new ArrayList<String>();
+		final OperatingSystem os = OperatingSystem.getCurrentPlatform();
+		final MinecraftVersion minecraftVersion = engine.getMinecraftVersion();
+		final boolean hasCustomJVM = minecraftVersion.getJavaVersion() != null;
+
+		if (hasCustomJVM && minecraftVersion.getJavaVersion().getComponent() != null) commands.add(GameEngine.getJavaPath(minecraftVersion, engine));
+	 	else commands.add(OperatingSystem.getJavaPath());
 
 		if (os.equals(OperatingSystem.OSX)) {
 			commands.add("-Xdock:name=Minecraft");
 			commands.add("-Xdock:icon=" + engine.getGameFolder().getAssetsDir() + "icons/minecraft.icns");
 		} else if (os.equals(OperatingSystem.WINDOWS)) {
-			commands.add("-XX:+UseConcMarkSweepGC");
-			commands.add("-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump");
+			if (minecraftVersion.getArguments() == null) commands.add("-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump");
 		}
+		
+		if (hasCustomJVM) {
+			commands.add("-XX:+UnlockExperimentalVMOptions");
+			commands.add("-XX:+UseG1GC");
+			commands.add("-XX:G1NewSizePercent=20");
+			commands.add("-XX:G1ReservePercent=20");
+			commands.add("-XX:MaxGCPauseMillis=50");
+			commands.add("-XX:G1HeapRegionSize=32M");
+			commands.add("-Djava.net.preferIPv4Stack=true");
+			commands.add("-Dminecraft.applet.TargetDirectory=" + engine.getGameFolder().getGameDir());
+		}
+		
+		final String customArgs = LauncherConfig.getConfig().vmarguments;
+		if(customArgs !=null && !customArgs.isEmpty()) {
+			final String str2[] = customArgs.split(" ");
+			commands.addAll(Arrays.asList(str2));
+		}
+
 		commands.add("-Djava.library.path=" + engine.getGameFolder().getNativesDir().getAbsolutePath());
-		commands.add("-Dfml.ignoreInvalidMinecraftCertificates=true");
-		commands.add("-Dfml.ignorePatchDiscrepancies=true");
-
-		boolean is32Bit = "32".equals(System.getProperty("sun.arch.data.model"));
-		String defaultArgument = is32Bit ? "-Xmx512M -Xmn128M" : "-Xmx1G -Xmn128M";
-		if (LauncherConfig.getConfig().allocatedram != null && !LauncherConfig.getConfig().allocatedram.isEmpty()) {
-			final int memory = Integer.parseInt(LauncherConfig.getConfig().allocatedram);
-			defaultArgument = is32Bit ? "-Xmx512M -Xmn128M" : "-Xmx" + memory+"G -Xmn128M";
-		}
-		String str[] = defaultArgument.split(" ");
-		List<String> args = Arrays.asList(str);
-		commands.addAll(args);
-
+		commands.add("-Dminecraft.launcher.brand=Minecraft");
+		commands.add("-Dminecraft.launcher.version=999");
 		commands.add("-cp");
 		commands.add("\"" + GameUtils.constructClasspath(engine) + "\"");
-		commands.add("net.minecraft.launchwrapper.Launch");
+		commands.add("-DFabricMcEmu=net.minecraft.client.main.Main");
 
-		if (engine.getMinecraftVersion().getMinecraftArguments() != null) {
-	        final String[] argsD = getArgumentsOlder();
-	        List<String> arguments = Arrays.asList(argsD);
-	        commands.addAll(arguments);
-		}
-		if (engine.getMinecraftVersion().getArguments() != null) {
-			List<Argument> argsNewer = engine.getMinecraftVersion().getArguments().get(ArgumentType.GAME);
-			final String[] newerArgumentsString = getArgumentsNewer(argsNewer);
+		commands.add(minecraftVersion.getMainClass());
 
+		/** ----- Minecraft Arguments ----- */
+		if (minecraftVersion.getMinecraftArguments() != null) commands.addAll(Arrays.asList(getArgumentsOlder()));
+
+		/** ----- Minecraft Arguments 1.13+ ----- */
+		if (minecraftVersion.getArguments() != null) {
+			final String[] defaultArguments = getArgumentsNewer(minecraftVersion.getArguments().get(ArgumentType.GAME));
+			
 			StringBuffer sb = new StringBuffer();
-			for (int i = 0; i < newerArgumentsString.length; i++) {
-				sb.append(newerArgumentsString[i] + " ");
-			}
+			for (int i = 0; i < defaultArguments.length; i++) sb.append(defaultArguments[i] + " ");
 			String sub = sb.toString().replace("--demo", "").replace("--width", "").replace("--height", "");
 			String strcs[] = sub.split(" ");
 			List<String> newerList = Arrays.asList(strcs);
 			commands.addAll(newerList);
 		}
-
-		commands.add("--width=" + 854);
-		commands.add("--height=" + 480);
-		commands.add("--tweakClass");
-		commands.add("net.minecraftforge.fml.common.launcher.FMLTweaker");
+		
+		// /** ----- Size of window ----- */
+		commands.add("--width");
+		commands.add(LauncherConfig.getConfig().screenWidth);
+		commands.add("--height");
+		commands.add(LauncherConfig.getConfig().screenHeight);
+		
 		return commands;
 	}
 	
 	private String[] getArgumentsOlder() {
-		final Map<String, String> map = new HashMap<String, String>();
-		final StrSubstitutor substitutor = new StrSubstitutor(map);
+		final HashMap<String, String> map = new HashMap<String, String>();
 		final String[] split = engine.getMinecraftVersion().getMinecraftArguments().split(" ");
-		map.put("auth_player_name", this.session.getUsername());
-		map.put("auth_uuid", this.session.getUuid());
-		map.put("auth_access_token", this.session.getToken());
+		/* Creating RAND UUID -> IG account system */
+		map.put("auth_player_name", UUID.randomUUID().toString().substring(0, 16));
+		map.put("auth_uuid", UUID.randomUUID().toString());
+		map.put("auth_access_token", UUID.randomUUID().toString());
 		map.put("user_type", "legacy");
 		map.put("version_name", this.engine.getMinecraftVersion().getId());
 		map.put("version_type", "release");
@@ -137,23 +153,23 @@ public class GameRunner {
 		map.put("assets_root", this.engine.getGameFolder().getAssetsDir().getAbsolutePath());
 		map.put("assets_index_name", this.engine.getMinecraftVersion().getAssets());
 		map.put("user_properties", "{}");
-
-		for (int i = 0; i < split.length; i++)
-			split[i] = substitutor.replace(split[i]);
-
+		for (int i = 0; i < split.length; i++) {
+			if(!split[i].contains("${")) continue;
+			final String arg = split[i].substring(split[i].indexOf("{")+1, split[i].indexOf("}"));
+			if(map.get(arg) !=null) split[i] = split[i].replace(arg, map.get(arg));
+			split[i] = split[i].replace("${", "").replace("}", "");
+		}
 		return split;
 	}
 
 	private String[] getArgumentsNewer(List<Argument> args) {
-		final Map<String, String> map = new HashMap<String, String>();
-		final StrSubstitutor substitutor = new StrSubstitutor(map);
+		final HashMap<String, String> map = new HashMap<String, String>();
 		final String[] split = new String[args.size()];
-		for (int i = 0; i < args.size(); i++) {
-			split[i] = args.get(i).getArguments();
-		}
-		map.put("auth_player_name", this.session.getUsername());
-		map.put("auth_uuid", this.session.getUuid());
-		map.put("auth_access_token", this.session.getToken());
+		for (int i = 0; i < args.size(); i++) split[i] = args.get(i).getArguments();
+		/* Creating RAND UUID -> IG account system */
+		map.put("auth_player_name", UUID.randomUUID().toString().substring(0, 16));
+		map.put("auth_uuid", UUID.randomUUID().toString());
+		map.put("auth_access_token", UUID.randomUUID().toString());
 		map.put("user_type", "legacy");
 		map.put("version_name", this.engine.getMinecraftVersion().getId());
 		map.put("version_type", "release");
@@ -161,39 +177,26 @@ public class GameRunner {
 		map.put("assets_root", this.engine.getGameFolder().getAssetsDir().getAbsolutePath());
 		map.put("assets_index_name", this.engine.getMinecraftVersion().getAssets());
 		map.put("user_properties", "{}");
-
-		for (int i = 0; i < split.length; i++)
-			split[i] = substitutor.replace(split[i]);
+		for (int i = 0; i < split.length; i++) {
+			if(!split[i].contains("${")) continue;
+			final String arg = split[i].substring(split[i].indexOf("{")+1, split[i].indexOf("}"));
+			if(map.get(arg) !=null) split[i] = split[i].replace(arg, map.get(arg));
+			split[i] = split[i].replace("${", "").replace("}", "");
+		}
 
 		return split;
 	}
 
 	private void unpackNatives() {
-		try {
-			FileUtil.unpackNatives(engine.getGameFolder().getNativesDir(), engine);
-		} catch (IOException e) {
-			e.printStackTrace();
-			return;
-		}
-	}
-
-	private void deleteFakeNatives() {
-		try {
-			FileUtil.deleteFakeNatives(engine.getGameFolder().getNativesDir(), engine);
-		} catch (IOException e) {
-			e.printStackTrace();
-			return;
-		}
+		try { FileUtil.unpackNatives(engine.getGameFolder().getNativesDir(), engine); }
+		catch (IOException e) { e.printStackTrace(); }
 	}
 
 	public static List<String> hideAccessToken(String[] arguments) {
         final ArrayList<String> output = new ArrayList<String>();
         for (int i = 0; i < arguments.length; i++) {
-            if (i > 0 && Objects.equals(arguments[i-1], "--accessToken")) {
-                output.add("????????");
-            } else {
-                output.add(arguments[i]);
-            }
+            if (i > 0 && Objects.equals(arguments[i-1], "--accessToken")) output.add("????????");
+            else output.add(arguments[i]);
         }
         return output;
     }
